# riot_na

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: master-test-build-upload.yml
notebooks/: utils.py
notebooks/data_processing/: anarci_database_preparation.ipynb  custom_database.ipynb  deduplicate_aa_genes.ipynb  dict_merge.py  ngs_sample_filter_species.ipynb  therapeutics_preprocess_and_filter_species.py
notebooks/final_benchmark/: aa_gene_assignment_therapeutics.ipynb  final_benchmark_ngs_validation_flags.ipynb  nt_gene_assignment_ngs.ipynb  time_measurments.ipynb  utils.py
notebooks/prefiltering_grid_search/: prefiltering_c_genes_grid_search.ipynb  prefiltering_d_genes_grid_search.ipynb  prefiltering_j_genes_grid_search.ipynb  prefiltering_v_genes_grid_search.ipynb  utils.py
notebooks/segments_regression/: aa_regresion_therapeutics.ipynb  nt_regresion_ngs.ipynb
notebooks/validation_flags/: aa_pipeline_validation_analysis.ipynb  aa_pipeline_validation_analysis_human.ipynb  aa_pipeline_validation_analysis_mouse.ipynb  nt_pipeline_validation_analysis.ipynb  nt_pipeline_validation_analysis_human.ipynb  nt_pipeline_validation_analysis_mouse.ipynb  regression_test_validation_analysis.ipynb
riot_na/: __init__.py  cli.py  config.py  riot_na.pyi
riot_na/airr/: airr_builder.py  airr_builder_aa.py  airr_validator.py
riot_na/alignment/: aa_gene_alignments.py  alignment_metrics.py  alignment_utils.py  gene_aligner.py  gene_match_utils.py  nt_gene_alignments.py  segment_gene_aligner.py  skbio_alignment.py  translate.py
riot_na/api/: api_mp.py  riot_numbering.py  utils.py
riot_na/common/: airr_csv_writer.py  assert_never.py  debug_utils.py  fasta.py  gene_match_utils.py  io.py  multi_species_prefiltering.py  multi_species_segment_prefiltering.py  serialization_utils.py
riot_na/data/: blosum_62.json  constants.py  model.py  scheme_definitions.py  scheme_mapping_facade.py  scheme_regions.py
riot_na/databases/gene_db/aa_genes/c_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes/j_genes/alpaca/: igh.fasta
riot_na/databases/gene_db/aa_genes/j_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes/j_genes/mouse/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes/v_genes/: all_species.fasta  alpaca.fasta  human.fasta  mouse.fasta
riot_na/databases/gene_db/aa_genes_deduplicated/c_genes/alpaca/: igh.fasta
riot_na/databases/gene_db/aa_genes_deduplicated/c_genes/human/: igl.fasta
riot_na/databases/gene_db/aa_genes_deduplicated/j_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes_deduplicated/j_genes/mouse/: igh.fasta
riot_na/databases/gene_db/aa_genes_deduplicated/v_genes/: all_species.fasta  alpaca.fasta  human.fasta
riot_na/databases/gene_db/aa_genes_first_allele/j_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes_first_allele/j_genes/mouse/: igk.fasta  igl.fasta
riot_na/databases/gene_db/aa_genes_first_allele/v_genes/: human.fasta  mouse.fasta
riot_na/databases/gene_db/c_genes/alpaca/: igh.fasta
riot_na/databases/gene_db/c_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/d_genes/alpaca/: igh.fasta
riot_na/databases/gene_db/d_genes/human/: igh.fasta
riot_na/databases/gene_db/d_genes/mouse/: igh.fasta
riot_na/databases/gene_db/j_genes/alpaca/: igh.fasta
riot_na/databases/gene_db/j_genes/human/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/j_genes/mouse/: igh.fasta  igk.fasta  igl.fasta
riot_na/databases/gene_db/v_genes/: all_species.fasta  alpaca.fasta  human.fasta  mouse.fasta
riot_na/databases/scheme_mappings/alpaca/chothia/: scheme_mapping.csv
riot_na/databases/scheme_mappings/alpaca/imgt/: scheme_mapping.csv
riot_na/databases/scheme_mappings/alpaca/kabat/: scheme_mapping.csv
riot_na/databases/scheme_mappings/alpaca/martin/: scheme_mapping.csv
riot_na/databases/scheme_mappings/human/chothia/: scheme_mapping.csv
riot_na/databases/scheme_mappings/human/imgt/: scheme_mapping.csv
riot_na/databases/scheme_mappings/human/kabat/: scheme_mapping.csv
riot_na/databases/scheme_mappings/human/martin/: scheme_mapping.csv
riot_na/databases/scheme_mappings/mouse/chothia/: scheme_mapping.csv
riot_na/databases/scheme_mappings/mouse/imgt/: scheme_mapping.csv
riot_na/databases/scheme_mappings/mouse/kabat/: scheme_mapping.csv
riot_na/databases/scheme_mappings/mouse/martin/: scheme_mapping.csv
riot_na/schemes/: collapse_alignment.py  region_offsets.py  scheme_alignment.py  smooth_alignment.py
riot_prefiltering/: lib.rs  model.rs  prefiltering.rs  tests.rs
tests/: test_aa_alignments.py  test_collapse_alignment.py  test_e2e.py  test_multidomain_alignment.py  test_nt_alignments.py  test_prefiltering_api.py  test_scheme_alignment.py  test_skbio_alignment.py  test_translate.py  test_utils.py
tests/regression/: ngs_baseline.py
tests/test_smooth_alignment/: test_smooth_cdr_junctions_chothia.py  test_smooth_cdr_junctions_imgt.py  test_smooth_cdr_junctions_kabat.py  test_smooth_cdr_junctions_martin.py
