[project]
authors = [{ name = "NaturalAntibody" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "biopython == 1.84",    # pinned because biopython does not comply with semantic versioning
    "blosum ~= 2.0",
    "click ~=8.1",
    "psutil ~=5.9",
    "python-dotenv ~= 1.0",
    "scikit-bio == 0.6.2",  # pinned because of the danger of deprecating SSW https://github.com/scikit-bio/scikit-bio/issues/1814
    "scipy ~=1.9",
    "tqdm ~= 4.66",
    "cachetools (>=5.5.2,<6.0.0)",
]
description = "Antibody numbering software"
name = "riot_na"
readme = "README.md"
requires-python = ">=3.10, <4.0"
version = "4.0.6"

[project.urls]
Homepage = "https://github.com/NaturalAntibody/riot_na"

[project.scripts]
riot_na = "riot_na.cli:run_riot"

# Poetry setup: for local development
[tool.poetry]
include = [{ path = "riot_na/riot_na.*.so", format = ["sdist", "wheel"] }]

[tool.poetry.group.dev.dependencies]
black = "^24.0"
cutadapt = "^4.5"
flake8 = "^7.0"
fsspec = "^2023.9.2"
isort = "^5.12"
maturin = "^1.8.2"
mypy = "^1.7"
pre-commit = "^3.5.0"
presto = "^0.7.1"
pyarrow = "^18.0"
pylint = "^3.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-icdiff = "^0.9"
s3fs = "^2023.9.2"
tabulate = "^0.9.0"
types-psutil = "^5.9.5.17"
types-tqdm = "^4.66.0.5"
commitizen = "^4.4.1"

[tool.poetry.group.release.dependencies]
python-semantic-release = "^9.4.0"

[tool.poetry.scripts]
riot_na = "riot_na.cli:run_riot"

[build-system]
build-backend = "maturin"
requires = ["maturin>=1,<2"]

# Maturin setup: for wheel building
[tool.maturin]
include = [{ path = "riot", format = "wheel" }]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
build_command = "maturin build -r --out dist/"
changelog_file = "CHANGELOG.md"
commit_message = "bump: {version} [skip ci]\n\nAutomatically generated by python-semantic-release"
commit_version_number = true
hvcs = "github"
tag_format = "v{version}"
upload_to_pypi = false
version_toml = ["pyproject.toml:project.version"]
version_variables = ["riot_na/__init__.py:__version__"]

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs", "build"]
